picostrap5-child-base/sass/_custom.scss
/* ... */
.woocommerce-cart-form a {
  font-size: 30px !important;
  letter-spacing: 0;
}

.woocommerce-message a {
  font-size: 30px !important;
  letter-spacing: 0;
  color: #000;
}

.woocommerce-cart-form__cart-item.cart_item img {
  min-width: 100px;
}

.woocommerce-cart-form .input-text.qty.text.form-control {
  color: #000;
}

.cart-collaterals #wc-stripe-payment-request-button-separator {
  margin: 1rem 0 !important;
  font-size: 30px !important;
  letter-spacing: 0;
}

.cart-collaterals .wc-proceed-to-checkout a {
  width: 100%;
  font-size: 16px !important;
  letter-spacing: 0;
}

// --------------------------------------------------------------------
// WooCommerce Checkout
// --------------------------------------------------------------------

.woocommerce-form-coupon-toggle {
  display: none;
}

.woocommerce-checkout #wc-stripe-payment-request-button-separator {
  margin: 1rem 0 !important;
  font-size: 30px !important;
  letter-spacing: 0;
}

.woocommerce-checkout h3 {
  font-size: 30px !important;
  letter-spacing: 0;
}

.woocommerce-checkout label {
  font-size: 20px !important;
  letter-spacing: 0;
}

.woocommerce-checkout li {
  font-size: 16px !important;
  letter-spacing: 0;
  color: #000;
}

.woocommerce-checkout span {
  font-size: 16px !important;
  letter-spacing: 0;
  color: #000;
}

.woocommerce-checkout span.optional {
  color: #fff;
}

.woocommerce-checkout-payment span {
  color: #000 !important;
}

.woocommerce-checkout input,
.woocommerce-checkout textarea,
.form-control:focus,
.widget_categories select:focus,
.widget_archive select:focus {
  color: #000;
}

.woocommerce-checkout .shop_table.woocommerce-checkout-review-order-table span {
  color: #fff;
}

.woocommerce-checkout-payment p,
.woocommerce-checkout-payment a {
  font-size: 16px !important;
  letter-spacing: 0;
  color: #000;
}

.woocommerce #order_comments_field label {
  line-height: 30px;
  margin-bottom: 20px;
}

.woocommerce .woocommerce-input-wrapper #order_comments {
  height: 50vh;
}

// Checkout Complete page

.woocommerce .woocommerce-order-overview li,
.woocommerce .woocommerce-order-overview li span {
  color: #fff;
}

.woocommerce-checkout span {
  color: #fff;
}

// --------------------------------------------------------------------
// Past Events
// --------------------------------------------------------------------

#llPastEvents p {
  line-height: 60px;
  font-size: 24px !important;
}

@media only screen and (max-width: 767px) {
  #llPastEvents p {
    line-height: 40px;
    font-size: 18px !important;
  }
}

// --------------------------------------------------------------------
// Modal Window
// --------------------------------------------------------------------

.modal {
  top: 30vh;
  color: black;
}

// --------------------------------------------------------------------
// Policy Pages
// --------------------------------------------------------------------

#privacyPolicy h1,
#termsAndConditions h1 {
  font-size: 32px !important;
  text-decoration: underline;
  letter-spacing: 0;
  text-align: center;
}

#privacyPolicy h2,
#termsAndConditions h2 {
  font-size: 22px !important;
  text-decoration: underline;
  letter-spacing: 0;
}

#privacyPolicy h3,
#termsAndConditions h3,
#termsAndConditions h3 strong {
  font-size: 20px !important;
  text-decoration: underline;
  letter-spacing: 0;
}

#privacyPolicy p,
#termsAndConditions p,
#privacyPolicy a,
#termsAndConditions a,
#privacyPolicy li,
#termsAndConditions li {
  font-size: 18px !important;
  letter-spacing: 0;
}

// --------------------------------------------------------------------
// Page Volume Element
// --------------------------------------------------------------------

#pageAudioElement {
  display: none;
}

#pageVolumeElementPlay {
  position: fixed;
  bottom: 50px;
  right: 30px;
  font-size: 20px;
  display: none;
  z-index: 99;
}

#pageVolumeElementMute {
  position: fixed;
  bottom: 50px;
  right: 30px;
  font-size: 20px;
  display: none;
  z-index: 99;
}

// --------------------------------------------------------------------
// Homepage experiences panel
// --------------------------------------------------------------------

#homepageExperiencesPanel {
  position: absolute;
  content: "";
  opacity: 1;
  display: none;
  background: #121212;
  z-index: 999999;
  // animation-name: onload-blank-screen;
  // animation-duration: 2.75s;
  // animation-delay: 0.25s;
  // transition-timing-function: ease-in;
  top: 0%;
  bottom: 0%;
  left: 0%;
  right: 0%;
  flex-flow: column;
  // justify-content: center;
  align-items: center;
  // height: 100vh;
  padding-top: 3rem;
}

#homepageExperiencesPanel figure {
  width: 50vw;
}

#homepageExperiencesPanel h2 {
  letter-spacing: 10px;
}

#fullExperienceBtn {
  font-family: rig-solid-bold-halftone, sans-serif;
  // font-size: 100px !important;
  font-size: 70px !important;

  // line-height: 140px;
  padding-left: 30px !important;
  padding-right: 30px !important;
  // border: 1px solid var(--bs-secondary);
  border-radius: 10px;
  // background: #393939d6;
  transition: all ease 0.3s;
  letter-spacing: 10px;
  background-color: var(--bs-secondary);
  color: var(--bs-dark) !important;
  border: 3px solid var(--bs-dark);
  box-shadow: 0px 0px 60px var(--bs-secondary);
}

#experiencePanelRecommended p {
  font-family: "Karla";
  font-size: 24px !important;
  letter-spacing: 5px;
  color: #ffffff7a !important;
}
/* ... */

